# apiguard-assurance

./: .env.example  .gitignore  README.en.md  README.md  TODO - pianificazione test-tool.md  TODO - tool esterni connectors.md  TODO - tool shadow api.md  TODO.md  build_zip.sh  comandi.md  config.yaml  config_crapi.yaml  docker-compose.yml  playground.py  pyproject.toml  setupArchitettura.md
docs/: ADDING_TESTS.md  API_REFERENCE.md  ARCHITECTURE.md
kong/: kong.yml
src/: cli.py  engine.py
src/config/: loader.py  schema.py
src/config/schema/: __init__.py  domain_0.py  domain_1.py  domain_3.py  domain_4.py  domain_6.py  domain_7.py  external_tools.py  tests_config.py  tool_config.py
src/connectors/: __init__.py  base.py
src/core/: NEXT PER CLAUDE.md  TODO.md  client.py  context.py  dag.py  evidence.py  exceptions.py  models.py
src/core/models/: __init__.py  enums.py  http.py  results.py  runtime.py  surface.py
src/discovery/: openapi.py  seed_generator.py  surface.py
src/external_tests/: base.py  registry.py
src/report/: builder.py  renderer.py  z Gerarchia Output.md
src/report/templates/: report.html
src/tests/: TODO.md  base.py  registry.py  strategy.py  zz Comandi-Test.md
src/tests/data/: injection_payloads.py  ssrf_payloads.py
src/tests/domain_0/: test_0_1_shadow_api_discovery.py  test_0_2_deny_by_default.py  test_0_3_deprecated_api_enforcement.py
src/tests/domain_1/: test_1_1_authentication_required.py  test_1_5_insecure_credential_transport.py  test_1_6_secure_session_management.py
src/tests/domain_3/: test_3_3_hmac_config_audit.py
src/tests/domain_4/: test_4_1_rate_limiting.py  test_4_1_rate_limiting_OK.py  test_4_2_timeout_config_audit.py  test_4_3_circuit_breaker_audit.py
src/tests/domain_6/: test_6_2_security_headers_audit.py  test_6_4_hardcoded_credentials_audit.py
src/tests/domain_7/: test_7_2_ssrf_prevention.py
src/tests/helpers/: auth.py  auth_forgejo.py  auth_jwt_login.py  forgejo_resources.py  jwt_forge.py  kong_admin.py  path_resolver.py  response_inspector.py
test-environments/forgejo-kong/: docker-compose.yml
test-environments/forgejo-kong/certs/: gen-certs.sh  server.crt  server.key
test-environments/forgejo-kong/kong/: kong.yml
tests_e2e/: conftest.py  test_01_smoke_connectivity.py
tests_integration/: conftest.py  test_01_config.py  test_02_discovery.py  test_03_registry_and_dag.py  test_04_metadata_propagation.py  test_05_execution.py  test_06_teardown.py  test_07_report.py
