[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "apiguard-assurance"
version = "1.0.0"
description = "Automated security assessment tool for REST APIs in Cloud environments."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

# Runtime dependencies — grouped by architectural layer for traceability.
#
# Pinning policy
# --------------
# Most dependencies use ">=" lower-bound pins to allow compatible upgrades.
# prance is the sole exception: it is pinned to an exact version ("==") because
# src/discovery/openapi.py accesses prance's internal attribute
# _ResolvingParser__reference_cache via Python name-mangling. This is a
# documented workaround for prance's lack of a public API for skipping backend
# validation (required to handle Swagger 2.0 specs that use "type: file").
# Any refactoring of prance's internals in a new release could silently break
# Phase 2 (OpenAPI Discovery) with an AttributeError at runtime. The exact pin
# eliminates this risk. When upgrading prance, re-run the full E2E smoke test
# suite (tests_e2e/test_01_smoke_connectivity.py) to verify compatibility before
# removing the pin.
dependencies = [
    # HTTP client: async-capable, used exclusively via SecurityClient wrapper.
    # No test module is allowed to import httpx directly.
    "httpx>=0.27",

    # Data validation and settings management (Pydantic v2 only).
    # TargetContext uses model_config = {"frozen": True}.
    "pydantic>=2.7",
    "pydantic-settings>=2.3",

    # YAML parsing for config.yaml loading.
    "PyYAML>=6.0",

    # OpenAPI spec fetching and $ref dereferencing.
    # PINNED to exact version — see "Pinning policy" note above.
    # Accessing _ResolvingParser__reference_cache is a name-mangled internal
    # attribute of prance.ResolvingParser. Any change to prance's internals
    # in a new release may break Phase 2 with AttributeError.
    # To upgrade: change the pin, run tests_e2e/test_01_smoke_connectivity.py,
    # and verify that build_attack_surface() still succeeds on the real target.
    "prance==23.6.21.141549",

    # OpenAPI spec structural validation (dialect-aware: OAS 3.0.x / 3.1.x).
    "openapi-spec-validator>=0.7",

    # Structured logging (JSON output, bound context propagation).
    # No module uses print() or stdlib logging directly.
    "structlog>=24.1",

    # Rich terminal output for CLI progress and status display.
    "rich>=13.7",

    # CLI framework: declarative argument parsing with type safety.
    "typer>=0.12",

    # Jinja2 for HTML report rendering from templates.
    "Jinja2>=3.1",

    # Retry logic with exponential backoff for SecurityClient.
    "tenacity>=8.3",

    # Environment variable loading from .env files.
    # Called once at process startup in cli.py — not in loader.py.
    "python-dotenv>=1.0",
]

[project.scripts]
# Exposes the CLI entry point after `pip install -e .`
apiguard = "src.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ---------------------------------------------------------------------------
# Development dependencies: tooling only, never imported at runtime.
# ---------------------------------------------------------------------------
[tool.hatch.envs.dev]
dependencies = [
    # End-to-end test runner against real target (no mocks).
    "pytest>=8.2",
    "pytest-asyncio>=0.23",

    # HTTP response recording for E2E test fixtures (optional, real server only).
    "pytest-httpx>=0.30",

    # Static type checking.
    "mypy>=1.10",
    "types-PyYAML>=6.0.12",

    # Linter and formatter (replaces flake8 + isort + black).
    "ruff>=0.4",
]

# ---------------------------------------------------------------------------
# Ruff: linting and formatting configuration.
# Target Python 3.11 syntax, strict ruleset appropriate for academic work.
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests_integration"]
exclude = ["scripts"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "S", "ANN"]
ignore = [
    "S101",
]

[tool.ruff.lint.per-file-ignores]
"tests_integration/*" = ["S101", "S106", "ANN", "N806"]
"tests_e2e/*"         = ["S101", "S106", "ANN", "N806"]
"scripts/*"           = ["E402", "S101", "S105", "S106", "ANN", "N817"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy: strict type checking configuration.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
exclude = ["^scripts/"]
plugins = ["pydantic.mypy"]
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_reexport = true
show_error_codes = true

# ---------------------------------------------------------------------------
# Pytest: test discovery configuration.
# The default testpaths covers only the integration suite (no network required).
# To run E2E tests against the live Docker stack:
#     pytest tests_e2e/ -v
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests_integration"]
asyncio_mode = "auto"
markers = [
    "p0: Priority 0 tests — Black Box, no credentials required",
    "p1: Priority 1 tests — Grey Box, requires valid JWT tokens",
    "p2: Priority 2 tests — Grey Box/White Box, application logic",
    "p3: Priority 3 tests — White Box, configuration audit",
    "domain_0: API Discovery and Inventory Management",
    "domain_1: Identity and Authentication",
    "domain_2: Authorization and Access Control",
    "domain_3: Data Integrity",
    "domain_4: Availability and Resilience",
    "domain_5: Visibility and Auditing",
    "domain_6: Configuration and Hardening",
    "domain_7: Business Logic and Sensitive Flows",
]