[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "apiguard-assurance"
version = "1.0.0"
description = "Automated security assessment tool for REST APIs in Cloud environments."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

# Runtime dependencies — grouped by architectural layer for traceability.
#
# Pinning policy
# --------------
# Most dependencies use ">=" lower-bound pins to allow compatible upgrades.
# prance is the sole exception: it is pinned to an exact version ("==") because
# src/discovery/openapi.py accesses prance's internal attribute
# _ResolvingParser__reference_cache via Python name-mangling. This is a
# documented workaround for prance's lack of a public API for skipping backend
# validation (required to handle Swagger 2.0 specs that use "type: file").
# Any refactoring of prance's internals in a new release could silently break
# Phase 2 (OpenAPI Discovery) with an AttributeError at runtime. The exact pin
# eliminates this risk. When upgrading prance, re-run the full E2E smoke test
# suite (tests_e2e/test_01_smoke_connectivity.py) to verify compatibility before
# removing the pin.
dependencies = [
    # HTTP client: async-capable, used exclusively via SecurityClient wrapper.
    # No test module is allowed to import httpx directly.
    "httpx>=0.27",

    # Data validation and settings management (Pydantic v2 only).
    # TargetContext uses model_config = {"frozen": True}.
    "pydantic>=2.7",
    "pydantic-settings>=2.3",

    # YAML parsing for config.yaml loading.
    "PyYAML>=6.0",

    # OpenAPI spec fetching and $ref dereferencing.
    # PINNED to exact version — see "Pinning policy" note above.
    # Accessing _ResolvingParser__reference_cache is a name-mangled internal
    # attribute of prance.ResolvingParser. Any change to prance's internals
    # in a new release may break Phase 2 with AttributeError.
    # To upgrade: change the pin, run tests_e2e/test_01_smoke_connectivity.py,
    # and verify that build_attack_surface() still succeeds on the real target.
    "prance==25.4.8.0",

    # OpenAPI spec structural validation (dialect-aware: OAS 3.0.x / 3.1.x).
    "openapi-spec-validator>=0.7",

    # Structured logging (JSON output, bound context propagation).
    # No module uses print() or stdlib logging directly.
    "structlog>=24.1",

    # Rich terminal output for CLI progress and status display.
    "rich>=13.7",

    # CLI framework: declarative argument parsing with type safety.
    "typer>=0.12",

    # Jinja2 for HTML report rendering from templates.
    "Jinja2>=3.1",

    # Retry logic with exponential backoff for SecurityClient.
    "tenacity>=8.3",

    # Environment variable loading from .env files.
    # Called once at process startup in cli.py — not in loader.py.
    "python-dotenv>=1.0",
]

[project.scripts]
# Exposes the CLI entry point after `pip install -e .`
apiguard = "src.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ---------------------------------------------------------------------------
# Development dependencies: tooling only, never imported at runtime.
# ---------------------------------------------------------------------------
[tool.hatch.envs.dev]
dependencies = [
    # End-to-end test runner against real target (no mocks).
    "pytest>=8.2",
    "pytest-asyncio>=0.23",

    # HTTP response recording for E2E test fixtures (optional, real server only).
    "pytest-httpx>=0.30",

    # Static type checking.
    "mypy>=1.10",
    "types-PyYAML>=6.0.12",

    # Linter and formatter (replaces flake8 + isort + black).
    "ruff>=0.4",

    # Security static analysis. [toml] extra required to read [tool.bandit]
    # from this file; without it bandit ignores the section entirely.
    "bandit[toml]>=1.7",

    # Dead code detection.
    "vulture>=2.11",

    # Dependency vulnerability scanning against PyPI Advisory DB and OSV.
    # Run with: hatch run dev:deps
    "pip-audit>=2.7",

    # Documentation generator for context building
    "pydoc-markdown"
]

# ---------------------------------------------------------------------------
# Hatch scripts: run the full static-analysis suite with a single command.
#
# Array syntax is used throughout: each entry is a separate shell command
# executed in sequence. Hatch stops on the first non-zero exit code, which
# is the desired behaviour — a type error should block the security scan.
#
#   hatch run dev:lint   → ruff + mypy            (fast, run on every commit)
#   hatch run dev:audit  → bandit + vulture        (slower, run before push)
#   hatch run dev:check  → full suite in sequence  (CI gate)
#   hatch run dev:deps   → pip-audit               (run before any release)
#   hatch run dev:docs   → pydoc-markdown          (run before creating the LLM zip context)
#
# Note on bandit: the -c pyproject.toml flag is mandatory. Without it bandit
# ignores [tool.bandit] entirely and runs with defaults, producing spurious
# output for B101/B105/B106 which are documented false positives (see below).
# ---------------------------------------------------------------------------
[tool.hatch.envs.dev.scripts]
lint = [
    "ruff check .",
    "mypy src/ tests_integration/",
]
audit = [
    "bandit -r src/ -c pyproject.toml",
    "vulture src/ --min-confidence 80",
]
check = [
    "ruff check .",
    "mypy src/ tests_integration/",
    "bandit -r src/ -c pyproject.toml",
    "vulture src/ --min-confidence 80",
]
deps = [
    "echo '--- PIP-AUDIT ---' && pip-audit --desc on",
]

docs = [
    "pydoc-markdown -I . -m src.engine -m src.core.models.runtime -m src.config.schema.tests_config -m src.core.client -m src.tests.base -m src.core.models.results -m src.core.models.enums -p src.tests.helpers > docs/API_REFERENCE.md"
]

# ---------------------------------------------------------------------------
# Bandit: security static analysis.
# Scans src/ only — test directories are excluded because assert statements
# and hardcoded test credentials are legitimate there and would flood output.
#
# Skipped rules (all confirmed false positives, documented individually):
#
#   B101 assert_used: already enforced by Ruff rule S101. assert is used in
#        production paths exclusively as a mypy narrowing guard
#        (e.g. `assert x is not None`) — not as a test assertion. Running
#        the same check twice produces duplicate noise with no added value.
#
#   B105 hardcoded_password_string: triggers on enum literals ("PASS", "FAIL"
#        in TestStatus) and on CSS class names ("badge-pass" in renderer.py).
#        None of these are credential strings.
#
#   B106 hardcoded_password_funcarg: triggers on log.debug(...,
#        token_preview="[REDACTED]") because the argument name contains
#        "token". The value "[REDACTED]" is the sanitization placeholder —
#        the opposite of a hardcoded secret.
# ---------------------------------------------------------------------------
[tool.bandit]
targets = ["src"]
exclude_dirs = ["tests_integration"]
skips = ["B101", "B105", "B106"]

# ---------------------------------------------------------------------------
# Vulture: dead code detection.
# min_confidence = 80 suppresses the high false-positive rate on abstract
# methods and dynamically-dispatched callbacks (e.g. BaseTest.execute,
# Pydantic validators, pytest hooks).
# ignore_names covers patterns that are "called" but not via direct reference:
#   execute      — called by engine.py via duck typing on BaseTest instances
#   model_*      — Pydantic-generated dunder methods
#   validator_*  — Pydantic field validators registered via decorator
# ---------------------------------------------------------------------------
[tool.vulture]
min_confidence = 80
paths = ["src"]
ignore_names = ["execute", "model_*", "validator_*"]

# ---------------------------------------------------------------------------
# Ruff: linting and formatting configuration.
# Target Python 3.11 syntax, strict ruleset appropriate for academic work.
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests_integration"]
exclude = ["scripts"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "S", "ANN"]
ignore = [
    "S101",
]

[tool.ruff.lint.per-file-ignores]
"tests_integration/*" = ["S101", "S106", "ANN", "N806"]
"tests_e2e/*"         = ["S101", "S106", "ANN", "N806"]
"scripts/*"           = ["E402", "S101", "S105", "S106", "ANN", "N817"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy: strict type checking configuration.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
exclude = ["^scripts/"]
plugins = ["pydantic.mypy"]
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_reexport = true
show_error_codes = true

# ---------------------------------------------------------------------------
# Pytest: test discovery configuration.
# The default testpaths covers only the integration suite (no network required).
# To run E2E tests against the live Docker stack:
#     pytest tests_e2e/ -v
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests_integration"]
asyncio_mode = "auto"
markers = [
    "p0: Priority 0 tests — Black Box, no credentials required",
    "p1: Priority 1 tests — Grey Box, requires valid JWT tokens",
    "p2: Priority 2 tests — Grey Box/White Box, application logic",
    "p3: Priority 3 tests — White Box, configuration audit",
    "domain_0: API Discovery and Inventory Management",
    "domain_1: Identity and Authentication",
    "domain_2: Authorization and Access Control",
    "domain_3: Data Integrity",
    "domain_4: Availability and Resilience",
    "domain_5: Visibility and Auditing",
    "domain_6: Configuration and Hardening",
    "domain_7: Business Logic and Sensitive Flows",
]